[project]
name = "utly"
version = "0.1.4"
description = "Handy utilities for Python development"
readme = "README.md"
authors = [
    { name = "Jan Mirco Pfeifer", email = "126580858+janmirco@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["examples/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utly"]
